# tuikdata

./: .Rbuildignore  .gitignore  CITATION.cff  CLAUDE.md  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.html  README.md  _pkgdown.yml  cran-comments.md  requirements.txt  server.py
.claude/: CLAUDE.md
.github/workflows/: R-CMD-check.yaml  air-format-check.yaml  pkgdown.yaml  test-coverage.yaml
R/: auth.R  geo-data.R  geo-map.R  helper.R  statistical-data.R  statistical-databases.R  statistical-resources.R  statistical-tables.R  statistical-themes.R  tuikR-package.R  utils-tidy-eval.R
man/: geo_data.Rd  geo_map.Rd  statistical_data.Rd  statistical_data_structure.Rd  statistical_databases.Rd  statistical_resources.Rd  statistical_tables.Rd  statistical_themes.Rd  tidyeval.Rd  tuikR-package.Rd
mcp-server/: .gitignore  README.md  pyproject.toml
mcp-server/src/tuik_mcp/: __init__.py  auth.py  geo.py  http_client.py  portal.py  sdmx.py  server.py
mcp-server/tests/: conftest.py  test_auth.py  test_geo.py  test_portal.py  test_sdmx.py  test_server.py
mcp-server/tests/fixtures/: data_generic.xml  data_structure_specific.xml  map_data.json  nuts2.json  side_menu.json  structure.xml  theme_tree.json
tests/testthat/: test-auth.R  test-cran-metadata.R  test-exported-validation.R  test-geo-data.R  test-helper-untested.R  test-statistical-data.R  test-statistical-databases.R  test-statistical-docs.R  test-statistical-helpers.R  test-statistical-sdmx-contract.R  test-statistical-sdmx-helpers.R  (+2 more)
vignettes/: geographic-mapping.Rmd  getting-started.Rmd  known-issues.Rmd
(+6 files in other folders)
