[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuik-mcp"
version = "0.1.0"
description = "FastMCP server exposing Turkish Statistical Institute (TUIK) statistical, SDMX, and geographic data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Emrah Er" }]
keywords = ["mcp", "fastmcp", "tuik", "sdmx", "turkey", "statistics"]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tuik-mcp = "tuik_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tuik_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
